sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:20: error: 'while' expected but '}' found.
  } while (a == 1)
  ^AlgBubbleSort1:20: error: ';' expected but 'while' found.
  } while (a == 1)
    ^AlgBubbleSort1:26: error: Unmatched closing brace '}' ignored here
}
^